--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-firebaseui": "^5.0.2",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.3",
+    "validator": "^13.7.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
